--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,12 @@
   "manifest_version": 3,
   "name": "Vercel Deploy",
   "version": "1.0.0",
-  "content_scripts": [
-    {
-      "matches": ["https://www.github.com/*"],
-      "js": ["Content.js"]
-    }
-  ]
+  "permissions": ["tabs"],
+  "action": {
+    "default_title": "Deploy to Vercel",
+    "default_icon": "vercel-logo.png"
+  },
+  "background": {
+    "service_worker": "background.js"
+  }
 }
